chore: accept IDE suggestions