@@ -4,6 +4,7 @@ import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.screens.Screen;
+import net.minecraft.client.player.LocalPlayer;
 import net.minecraft.client.resources.language.I18n;
 import net.minecraft.core.BlockPos;
 import net.minecraft.sounds.SoundEvents;
@@ -26,10 +27,10 @@ public class ObjectTracker {
     @Getter
     private static ObjectTracker instance = new ObjectTracker();
 
-    private final Keystroke nextItemKeyPressed = new Keystroke(() -> KeyUtils.isAnyPressed(KeyBindingsHandler.getInstance().objectTrackerNextItem), Keystroke.TriggeredAt.PRESSED);
-    private final Keystroke previousItemKeyPressed = new Keystroke(() -> KeyUtils.isAnyPressed(KeyBindingsHandler.getInstance().objectTrackerPreviousItem), Keystroke.TriggeredAt.PRESSED);
-    private final Keystroke narrateCurrentObjectKeyPressed = new Keystroke(() -> KeyUtils.isAnyPressed(KeyBindingsHandler.getInstance().objectTrackerNarrateCurrentObject), Keystroke.TriggeredAt.PRESSED);
-    private final Keystroke targetNearestObjectKeyPressed = new Keystroke(() -> KeyUtils.isAnyPressed(KeyBindingsHandler.getInstance().targetNearestObject), Keystroke.TriggeredAt.PRESSED);
+    private final Keystroke nextItemKeyPressed = new Keystroke(() -> KeyUtils.isAnyPressed(KeyBindingsHandler.objectTrackerNextItem), Keystroke.TriggeredAt.PRESSED);
+    private final Keystroke previousItemKeyPressed = new Keystroke(() -> KeyUtils.isAnyPressed(KeyBindingsHandler.objectTrackerPreviousItem), Keystroke.TriggeredAt.PRESSED);
+    private final Keystroke narrateCurrentObjectKeyPressed = new Keystroke(() -> KeyUtils.isAnyPressed(KeyBindingsHandler.objectTrackerNarrateCurrentObject), Keystroke.TriggeredAt.PRESSED);
+    private final Keystroke targetNearestObjectKeyPressed = new Keystroke(() -> KeyUtils.isAnyPressed(KeyBindingsHandler.targetNearestObject), Keystroke.TriggeredAt.PRESSED);
 
     private List<POIGroup<?>> groups = new ArrayList<>();
 
@@ -58,7 +59,6 @@ public class ObjectTracker {
     public void update() {
         Minecraft minecraftClient = Minecraft.getInstance();
 
-        if (minecraftClient == null) return;
         if (minecraftClient.player == null) return;
         if (minecraftClient.level == null) return;
         if (minecraftClient.screen != null) return;
@@ -87,7 +87,7 @@ public class ObjectTracker {
 
         int currentGroupIndex = groups.indexOf(currentGroup);
 
-        if (!groups.isEmpty() && currentGroupIndex == -1) currentGroup = groups.get(0);
+        if (!groups.isEmpty() && currentGroupIndex == -1) currentGroup = groups.getFirst();
         if (groups.isEmpty() && currentGroupIndex != -1) currentGroup = null;
     }
 
@@ -99,22 +99,18 @@ public class ObjectTracker {
     private void narrateCurrentObject(boolean interupt) {
         if (checkAndSpeakIfAllGroupsEmpty()) return;
 
-        if (currentObject instanceof Entity) {
-            Entity entity = (Entity)currentObject;
-
+        if (currentObject instanceof Entity entity) {
             String message = NarrationUtils.narrateEntity(entity);
             if (speakDistance) message += " " + NarrationUtils.narrateRelativePositionOfPlayerAnd(entity.blockPosition());
             MainClass.speakWithNarrator(message, interupt);
             WorldUtils.playSoundAtPosition(SoundEvents.NOTE_BLOCK_BELL, 1, 1f, entity.position());
         }
 
-        if (currentObject instanceof BlockPos) {
-            BlockPos block = (BlockPos)currentObject;
-
-            String message = NarrationUtils.narrateBlock(block, null);
-            if (speakDistance) message += " " + NarrationUtils.narrateRelativePositionOfPlayerAnd(block);
+        if (currentObject instanceof BlockPos blockPos) {
+            String message = NarrationUtils.narrateBlock(blockPos, null);
+            if (speakDistance) message += " " + NarrationUtils.narrateRelativePositionOfPlayerAnd(blockPos);
             MainClass.speakWithNarrator(message, interupt);
-            WorldUtils.playSoundAtPosition(SoundEvents.NOTE_BLOCK_BELL, 1, 1f, block.getCenter());
+            WorldUtils.playSoundAtPosition(SoundEvents.NOTE_BLOCK_BELL, 1, 1f, blockPos.getCenter());
         }
     }
 
@@ -178,8 +174,9 @@ public class ObjectTracker {
         if (!entities.isEmpty() && blocks.isEmpty()) currentObject = entities.getFirst();
         if (!blocks.isEmpty() && entities.isEmpty()) currentObject = blocks.getFirst();
         if (!entities.isEmpty() && !blocks.isEmpty()) {
-            double distanceToEntity = Minecraft.getInstance().player.distanceTo(entities.getFirst());
-            double distanceToBlock = Minecraft.getInstance().player.getEyePosition().distanceTo(blocks.getFirst().getCenter());
+            LocalPlayer player = WorldUtils.getClientPlayer();
+            double distanceToEntity = player.distanceTo(entities.getFirst());
+            double distanceToBlock = player.getEyePosition().distanceTo(blocks.getFirst().getCenter());
 
             if (distanceToEntity <= distanceToBlock) currentObject = entities.getFirst();
             if (distanceToBlock < distanceToEntity) currentObject = blocks.getFirst();
